--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Clockify Support CLI v4.0 with DeepSeek Integration
+# Clockify Support CLI v4.0 - Ollama Optimized
 # Production dependencies (pinned versions)
 
 # HTTP client and networking
@@ -8,9 +8,13 @@ urllib3==2.2.3
 # Numerical computing and data structures
 numpy==2.3.4
 
-# Embeddings model (local, no external API)
+# Embeddings and retrieval
 sentence-transformers==3.3.1
 torch==2.4.2
+rank-bm25==0.2.2
+
+# ANN (Approximate Nearest Neighbors) - optional but recommended
+faiss-cpu==1.8.0.post1
 
 # Optional: for development/testing
 # pytest==7.4.4
