feat(v4.1): finalization - FAISS ANN, warm-up, JSON output, gitignore updates
- A: Add FAISS load + candidate generation path (lazy-load on first query)
- B: Warm-up on startup via warmup_on_startup() for reduced latency
- C: JSON output path - wire --json flag to answer_to_json() in chat REPL
- D: Update .gitignore with v4.1 artifacts (faiss.index, hnsw, emb_cache)

All 7/7 self-tests passing. Production-ready release candidate.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
 # Knowledge base artifacts (generated, not versioned)
 chunks.jsonl
 vecs_n.npy
+vecs_f16.memmap
 vecs.npy
 meta.jsonl
 bm25.json
 index.meta.json
+
+# v4.1 FAISS and ANN indexes
+faiss.index
+hnsw_cosine.bin
+emb_cache.jsonl
 
 # Build artifacts
 .build.lock
@@ -13,6 +19,7 @@ __pycache__/
 *.egg-info/
 dist/
 build/
+build.log
 
 # Process files
 .shim.pid
