chore: sync working tree

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,3 @@
-# Clockify Support CLI v4.1.2 - Ollama Optimized with M1 Support
-# Production dependencies (pinned versions)
-
-# HTTP client and networking
-requests==2.32.5
-urllib3==2.2.3
-aiohttp==3.11.11  # Async HTTP client for async_support module (Analysis Section 9.1 #1)
-redis==5.2.1      # Distributed rate limiter backend (optional)
-
-# Numerical computing and data structures
-numpy==2.3.4
-
-# Tokenization (optional, for accurate token counting - Rank 5 improvement)
-tiktoken>=0.5.0
-
-# Embeddings and retrieval
-sentence-transformers==3.3.1
-torch>=2.3.0,<2.6.0  # Cross-platform compatible (see pyproject.toml)
-rank-bm25==0.2.2
-nltk==3.9.1  # Rank 23: Sentence-aware chunking
-
-# ANN (Approximate Nearest Neighbors) - optional but recommended
-# IMPORTANT FOR M1 USERS:
-#   - pip installation may fail on ARM64 macOS
-#   - Use conda for best compatibility:
-#     conda install -c conda-forge faiss-cpu=1.8.0
-#   - See M1_COMPATIBILITY.md for detailed installation instructions
-#   - Application has graceful fallback if FAISS is unavailable
-faiss-cpu==1.8.0.post1
-
-# Development and testing dependencies
-pytest==8.3.4
-pytest-cov==6.0.0
-pytest-xdist==3.5.0  # Parallel test execution
-black==24.1.1
-pylint==3.0.3
-mypy==1.13.0  # Static type checking
-ruff==0.8.4  # Fast Python linter
-pre-commit==4.0.1  # Git pre-commit hooks
+# Primary dependency definitions live in pyproject.toml.
+# Installing from this file keeps legacy workflows working:
+-e .
