--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "clockify-rag"
 version = "5.9.1"
 description = "Production-ready RAG system with Apple Silicon support, hybrid retrieval, and modular architecture"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.12"
 license = { text = "MIT" }
 authors = [
     { name = "Clockify Team", email = "support@clockify.me" }
@@ -37,76 +37,59 @@ classifiers = [
 
 dependencies = [
     # HTTP client and networking
-    "requests>=2.31.0",
-    "urllib3>=2.1.0",
-    "aiohttp>=3.11.0",  # Async HTTP client for async_support
-    "redis>=5.2.0",  # Distributed rate limiter backend
+    "requests>=2.32.0,<3.0.0",
+    "urllib3>=2.2.0,<3.0.0",
 
-    # Numerical computing and data structures
-    "numpy>=1.26.0,<2.4.0",
+    # Numerical computing and core data processing
+    "numpy>=1.26.0,<2.5.0",
+    "pandas>=2.1.0,<3.0.0",
 
-    # Tokenization
-    "tiktoken>=0.5.0",
+    # Tokenization / text utilities
+    "tiktoken>=0.5.0,<0.7.0",
+    "nltk>=3.8.0,<4.0.0",
 
     # Embeddings and retrieval
-    "sentence-transformers>=2.6.0",
+    "sentence-transformers>=2.6.0,<3.0.0",
     "torch>=2.3.0,<2.6.0",  # Metal/MPS stable window for macOS
-    "rank-bm25>=0.2.2",
-    "nltk>=3.8.0",
+    "rank-bm25>=0.2.2,<0.3.0",
 
-    # ANN (Approximate Nearest Neighbors)
-    # Note for M1/ARM64: Use conda for installation or set USE_ANN fallback
-    "faiss-cpu>=1.8.0",
-    "hnswlib>=0.8.0",  # ANN fallback if FAISS unavailable
+    # Document ingestion helpers
+    "PyPDF2>=3.0.0,<4.0.0",
+    "beautifulsoup4>=4.12.0,<5.0.0",
+    "python-docx>=0.8.11,<0.9.0",
+
+    # ANN / vector index (FAISS wheels unavailable on macOS arm64; install via conda there)
+    "faiss-cpu>=1.8.0,<1.9.0; platform_system != 'Darwin' or platform_machine != 'arm64'",
 
     # Core dependencies for API and CLI
-    "fastapi>=0.115.0",
-    "uvicorn>=0.30.0",
-    "pydantic>=2.7.0",
-    "httpx>=0.27.0",
-    "typer>=0.12.0",
+    "fastapi>=0.115.0,<0.116.0",
+    "uvicorn>=0.30.0,<0.31.0",
+    "pydantic>=2.7.0,<3.0.0",
+    "typer>=0.12.0,<0.13.0",
+    "rich>=13.7.0,<14.0.0",
 
-    # Data processing and utilities
-    "tqdm>=4.66.0",
-    "rich>=13.7.0",
-    "loguru>=0.7.0",
-    "pyyaml>=6.0.2",
-    "python-dotenv>=1.0.0",
-
-    # Scientific computing
-    "scipy>=1.11.0",
-    "scikit-learn>=1.4.0",
+    # Utilities
+    "typing_extensions>=4.8.0,<5.0.0",
+    "psutil>=5.9.0,<6.0.0",
 ]
 
 [project.optional-dependencies]
-api = [
-    "fastapi>=0.115.0",
-    "uvicorn>=0.30.0",
-]
-openai = [
-    "openai>=1.50.0",
-]
-anthropic = [
-    "anthropic>=0.34.0",
-]
-ollama = [
-    "ollama>=0.3.0",
-]
 eval = [
     "ragas>=0.1.14",
     "datasets>=2.19.0",
     "evaluate>=0.4.0",
 ]
 dev = [
-    "pytest>=8.2.0",
-    "pytest-cov>=5.0.0",
-    "pytest-xdist>=3.5.0",
-    "pytest-asyncio>=0.24.0",
     "black>=24.1.0",
-    "ruff>=0.8.0",
+    "httpx>=0.27.0,<0.28.0",
+    "ipython>=8.20.0",
     "mypy>=1.13.0",
     "pre-commit>=3.7.0",
-    "ipython>=8.20.0",
+    "pytest>=8.2.0",
+    "pytest-asyncio>=0.24.0",
+    "pytest-cov>=5.0.0",
+    "pytest-xdist>=3.5.0",
+    "ruff>=0.8.0",
 ]
 
 [project.urls]
@@ -116,7 +99,7 @@ Repository = "https://github.com/apet97/1rag.git"
 Issues = "https://github.com/apet97/1rag/issues"
 
 [project.scripts]
-ragctl = "clockify_rag.cli_modern:app"
+ragctl = "clockify_rag.cli:app"
 
 # ============================================================================
 # Tool Configurations
@@ -220,7 +203,6 @@ addopts = "-v --tb=short --strict-markers"
 markers = [
     "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "asyncio: async tests using event loop",
 ]
 
 [tool.coverage.run]
