Add production-ready improvements
- De-hardcode internal endpoint for flexible deployment
- Add request ID tracing for end-to-end correlation
- Implement structured error codes (RAG_E001-E504) with troubleshooting hints
- Add exponential backoff retry logic (1s, 2s, 4s, 8s delays)
- Enhance error handling with stack traces and request ID propagation
- Strengthen citation validation with multi-strategy extraction
- Add optional NLI-based hallucination detection
- Document all magic numbers and heuristics

New modules:
- clockify_rag/request_context.py - Thread-safe request ID management
- clockify_rag/error_codes.py - Complete error taxonomy (26 codes)
- clockify_rag/retry.py - Exponential backoff decorator
- clockify_rag/citation_validator.py - Multi-strategy citation extraction
- clockify_rag/hallucination_detector.py - NLI-based hallucination detection
- PRODUCTION_IMPROVEMENTS_SUMMARY.md - Complete documentation

All changes are backward compatible and opt-in.

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@
 # Only create a .env file if you need to override defaults.
 #
 # Current defaults (no .env needed):
-# - LLM endpoint: http://10.127.0.192:11434 (company VPN)
+# - LLM endpoint: http://10.127.0.192:11434 (⚠️  COMPANY VPN ONLY - change for your environment)
 # - Chat model: qwen2.5:32b
 # - Embed model: nomic-embed-text:latest
 # - Provider: ollama
@@ -18,8 +18,15 @@
 # ================================================
 
 # ====== OLLAMA / LLM CONFIGURATION ======
-# Remote Ollama endpoint (default: http://10.127.0.192:11434)
-# Uncomment to override (e.g., use local Ollama):
+# Ollama endpoint (ENVIRONMENT-SPECIFIC)
+# ⚠️  Default is company VPN endpoint - change for your deployment!
+#
+# Common profiles:
+#   - Local Ollama:    RAG_OLLAMA_URL=http://127.0.0.1:11434
+#   - Company VPN:     RAG_OLLAMA_URL=http://10.127.0.192:11434
+#   - Custom endpoint: RAG_OLLAMA_URL=http://your-host:port
+#
+# Uncomment and set for your environment:
 # RAG_OLLAMA_URL=http://127.0.0.1:11434
 
 # Generation model (default: qwen2.5:32b)
